# experimental-computer-for-schools

./: .gitignore  404.html  README.md  index.html  programs.odt
firmware/escw/: #CMakeLists.txt#  CMakeLists.txt  esc.h  esc_fsms.h  escw.c  experimental_schools_computer.c  fsms.c  lwipopts.h  old_escw.c
firmware/escw/build1/: CMakeCache.txt  Makefile
firmware/escw/build1/pico-sdk/: Makefile
firmware/escw/build1/pico-sdk/docs/: Makefile  cmake_install.cmake
firmware/escw/build1/pico-sdk/src/: Makefile  cmake_install.cmake
firmware/escw/build1/pico-sdk/src/common/boot_picobin_headers/: Makefile
firmware/escw/build1/pico-sdk/src/common/hardware_claim/: Makefile  cmake_install.cmake
firmware/escw/build1/pico-sdk/src/common/pico_base_headers/: Makefile  cmake_install.cmake
firmware/escw/build1/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
firmware/escw/build1/pico-sdk/src/common/pico_bit_ops_headers/: Makefile  cmake_install.cmake
firmware/escw/build1/pico-sdk/src/common/pico_divider_headers/: cmake_install.cmake
firmware/escw/build1/pico-sdk/src/common/pico_stdlib_headers/: Makefile  cmake_install.cmake
firmware/escw/build1/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
firmware/escw/build1/pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
firmware/escw/build1/pico-sdk/src/common/pico_usb_reset_interface_headers/: Makefile  cmake_install.cmake
firmware/escw/build1/pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
firmware/escw/build1/pico-sdk/src/rp2040/boot_stage2/: bs2_default.dis  cmake_install.cmake
firmware/escw/build1/pico-sdk/src/rp2040/hardware_regs/: Makefile
firmware/escw/build1/pico-sdk/src/rp2040/hardware_structs/: Makefile  cmake_install.cmake
firmware/escw/build1/pico-sdk/src/rp2040/pico_platform/: Makefile
firmware/escw/build1/pico-sdk/src/rp2_common/cmsis/: Makefile  cmake_install.cmake
firmware/escw/build1/pico-sdk/src/rp2_common/hardware_base/: cmake_install.cmake
firmware/escw/build1/pico-sdk/src/rp2_common/hardware_boot_lock/: Makefile
firmware/escw/build1/pico-sdk/src/rp2_common/hardware_divider/: Makefile  cmake_install.cmake
firmware/escw/build1/pico-sdk/src/rp2_common/hardware_dma/: Makefile  cmake_install.cmake
firmware/escw/build1/pico-sdk/src/rp2_common/hardware_exception/: cmake_install.cmake
firmware/escw/build1/pico-sdk/src/rp2_common/hardware_gpio/: Makefile  cmake_install.cmake
firmware/escw/build1/pico-sdk/src/rp2_common/hardware_i2c/: cmake_install.cmake
firmware/escw/build1/pico-sdk/src/rp2_common/hardware_interp/: cmake_install.cmake
firmware/escw/build1/pico-sdk/src/rp2_common/hardware_irq/: Makefile
firmware/escw/build1/pico-sdk/src/rp2_common/hardware_pio/: Makefile
firmware/escw/build1/pico-sdk/src/rp2_common/hardware_pll/: cmake_install.cmake
firmware/escw/build1/pico-sdk/src/rp2_common/hardware_pwm/: Makefile  cmake_install.cmake
firmware/escw/build1/pico-sdk/src/rp2_common/hardware_resets/: Makefile  cmake_install.cmake
firmware/escw/build1/pico-sdk/tools/: cmake_install.cmake
firmware/escw/build1/pico_extras/: Makefile
firmware/escw/build1/pico_extras/src/: Makefile  cmake_install.cmake
firmware/escw/build1/pico_extras/src/common/: cmake_install.cmake
firmware/escw/build1/pico_extras/src/rp2_common/: cmake_install.cmake
firmware/escw/build1/picotool/tmp/: picotoolBuild-cfgcmd.txt
firmware/escw/build1/pioasm/: cmake_install.cmake
firmware/escw/old_build/: CMakeCache.txt  Makefile  cmake_install.cmake  escw.dis  escw.elf.map  escw.hex  escw.uf2
firmware/escw/old_build/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake
firmware/escw/old_build/elf2uf2/boot_uf2_headers/: Makefile
firmware/escw/old_build/pico-sdk/: Makefile  cmake_install.cmake
firmware/escw/old_build/pico-sdk/docs/: Makefile
firmware/escw/old_build/pico-sdk/src/: Makefile  cmake_install.cmake
firmware/escw/old_build/pico-sdk/src/common/: Makefile  cmake_install.cmake
firmware/escw/old_build/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
firmware/escw/old_build/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
firmware/escw/old_build/pico-sdk/tools/: Makefile
firmware/escw/old_build/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake
firmware/escw/oldbuild/: Makefile  cmake_install.cmake  escw.uf2
firmware/escw/oldbuild/elf2uf2/: CMakeCache.txt
firmware/escw/oldbuild/elf2uf2/boot_uf2_headers/: Makefile  cmake_install.cmake
firmware/escw/oldbuild/pico-sdk/docs/: cmake_install.cmake
firmware/escw/oldbuild/pico-sdk/src/: Makefile
firmware/escw/oldbuild/pico-sdk/src/common/: cmake_install.cmake
firmware/escw/oldbuild/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
firmware/escw/oldbuild/pico-sdk/src/rp2_common/: Makefile
firmware/escw/oldbuild/pico-sdk/tools/: cmake_install.cmake
firmware/escw/oldbuild/pico_extras/src/: Makefile  cmake_install.cmake
firmware/escw/oldbuild/pico_extras/src/common/: Makefile  cmake_install.cmake
firmware/escw/oldbuild/pico_extras/src/rp2_common/: cmake_install.cmake
firmware/escw/oldbuild/pioasm/: CMakeCache.txt
firmware/pico_main/: CMakeLists.txt  CMakeLists.txt~  esc.h  esc.h~  esc_desktop_display.c  esc_desktop_display.h  esc_fsms.c  esc_fsms.h  experimental_schools_computer.c  extracode.c  extracode.h  extracode_basic.c  extracode_fp.c  fsms.h  oled.c  oled.h  sdcard.c  sdcard.h  switches.h  version.h
(+634 files in other folders)
